# fastapi-over-django-test

./: .dockerignore  Dockerfile  README.md  docker-compose.yml  manage.py  pyproject.toml
app/: api.py  asgi.py  schemas.py  settings.py
app/infrastructure/: models.py
app/infrastructure/migrations/: 0001_initial.py
scripts/: bench.sh
tests/: test_orders.py
