[project]
name = "fastapi-over-django-test"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "django>=6,<7",
    "fastapi>=0.136,<1",
    "uvicorn[standard]>=0.47,<1",
    "psycopg[binary]>=3,<4",
    "pydantic>=2,<3",
    "pytest>=9,<10",
    "pytest-django>=4,<5",
    "httpx>=0.28,<1",
]

[tool.uv]
package = false

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "app.settings"
python_files = "test_*.py"
addopts = "-ra -v"
